[tool.poetry]
name = "repl_python3_Gmeet-auto-boii"
version = "0.1.0"
description = ""
authors = ["arpix <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
pynput = "^1.7.3"
xlib = "^0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
